--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "eDNA Explorer"
-#date: "`r format(Sys.time(), '%Y-%m-%d')`"
+date: "`r format(Sys.time(), '%Y-%m-%d')`"
 output:
   html_document:
     toc: true
